Agregue el archivo piedraPapelTijera.js

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 <body>
 
 
-
-  <script src="./js/ejercicioExtra3.js"></script>
+  <script src="./js/piedraPapelTijera.js"></script>
 </body>
 
 </html>
